; ModuleID = '/home/carl/AnghaBench/jq/src/extr_builtin.c_f_string_explode.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_builtin.c_f_string_explode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JV_KIND_STRING = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [31 x i8] c"explode input must be a string\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @f_string_explode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @f_string_explode(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @jv_get_kind(i32 %6)
  %8 = load i64, i64* @JV_KIND_STRING, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @jv_string(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %13 = call i32 @ret_error(i32 %11, i32 %12)
  store i32 %13, i32* %3, align 4
  br label %17

14:                                               ; preds = %2
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @jv_string_explode(i32 %15)
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %14, %10
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i64 @jv_get_kind(i32) #1

declare dso_local i32 @ret_error(i32, i32) #1

declare dso_local i32 @jv_string(i8*) #1

declare dso_local i32 @jv_string_explode(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
